created Japanese flag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <div id="french-three"></div>
   </section>
 
+  <section class="japanese">
+    <div id="japanese-outer">
+      <div id="japanese-inner"></div>
+    </div>
+  </section>
+
 </body>
 
 </html>
