changed css to use flexbox

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
 </head>
 
 <body>
-  <section class="german">
-    <div id="german-one"></div>
-    <div id="german-two"></div>
-    <div id="german-three"></div>
-  </section>
+  <main>
+    <section class="german">
+      <div id="german-one"></div>
+      <div id="german-two"></div>
+      <div id="german-three"></div>
+    </section>
 
-  <section class="french">
-    <div id="french-one"></div>
-    <div id="french-two"></div>
-    <div id="french-three"></div>
-  </section>
+    <section class="french">
+      <div id="french-one"></div>
+      <div id="french-two"></div>
+      <div id="french-three"></div>
+    </section>
 
-  <section class="japanese">
-    <div id="japanese-outer">
-      <div id="japanese-inner"></div>
-    </div>
-  </section>
+    <section class="japanese">
+      <div id="japanese-outer">
+        <div id="japanese-inner"></div>
+      </div>
+    </section>
+  </main>
 
 </body>
 
